peac_dev/force-app/main/default/objects/Disclaimer_for_DP_D_A_Button__mdt/Disclaimer_for_DP_D_A_Button__mdt.object-meta.xml
<CustomObject>
    <label>Disclaimer for DP D&amp;A Button</label>
    <pluralLabel>Disclaimer for DP D&amp;A Buttons</pluralLabel>
</CustomObject>