peac_dev/force-app/main/default/objects/Disclaimer_for_DP_D_A_Button__mdt/fields/Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost__c</fullName>
    <label>Equipment Cost</label>
    <length>10</length>
    <type>Text</type>
</CustomField>