peac_dev/force-app/main/default/objects/Disclaimer_for_DP_D_A_Button__mdt/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>