peac_dev/force-app/main/default/objects/Disclaimer_for_DP_D_A_Button__mdt/fields/Pre_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Pre_Delivery__c</fullName>
    <label>Pre-Delivery</label>
    <length>100</length>
    <type>Text</type>
</CustomField>