peac_dev/force-app/main/default/objects/Disclaimer_for_DP_D_A_Button__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Message__c</columns>
    <columns>Pre_Delivery__c</columns>
    <columns>Equipment_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>